--- a/.github/workflows/action-tests.yml
+++ b/.github/workflows/action-tests.yml
@@ -1,23 +1,19 @@
-name: Run Python Tests
-run-name: ${{github.actor}} is testing out Github Actions!
+name: GitHub Actions Demo
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on: [push]
 jobs:
-  Execute-Python-Tests:
-    runs-on: ubuntu latest
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
     steps:
-        - name: Checkout and Setup
-          uses: actions/checkout@v2
-        - name: Setup python
-          uses: actions/setup-python@v2
-          with:
-            python-version: '3.9'
-        - name: Install requirmenets
-          run: |
-            pip install requirments.txt
-        - name: Run Tests
-        - run: pytest_tests/test_sample.py
-        - name: Lists files in Repository
-          run: |
-            ls ${{ github.workspace }}
-        - run: echo "This job status is ${{ job.status }}."
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v3
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
   
