--- a/.github/workflows/action-tests.yml
+++ b/.github/workflows/action-tests.yml
@@ -12,7 +12,7 @@ jobs:
           python-version: '3.9'
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -r pytest_test/requirements.txt
       - name: Test with pytest
         run: |
           pip install pytest
