--- a/.github/workflows/action-tests.yml
+++ b/.github/workflows/action-tests.yml
@@ -16,4 +16,4 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
         run: |
-          pytest
+          pytest_test/pytest
