--- a/.github/workflows/action-tests.yml
+++ b/.github/workflows/action-tests.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
-          pip install -r requirements.txt
+          pip install -r pytest_test/requirements.txt
       - name: Run test with pytest
         run: |
           pytest
